--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
---extra-index-url https://download.pytorch.org/whl/cu113
-imageio==2.19.5
-imageio-ffmpeg==0.4.7
-numpy==1.22.4
-opencv-python-headless==4.6.0.66
-torch==1.12.0+cu113
-torchvision==0.13.0+cu113
+gradio>=4.40.0
+imageio-ffmpeg>=0.5.1
+
+
