--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 gradio==4.40.0
 imageio-ffmpeg==0.5.1
 torch==2.4.0
-diffusers
+git+https://github.com/huggingface/diffusers.git@9c6b8894ff3f2a1aa000e2e1faf3291aa7a4f3e5#egg=diffusers
 spaces==0.29.2
 moviepy==1.0.3
