--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ torch==2.2.0
 git+https://github.com/huggingface/diffusers.git@9c6b8894ff3f2a1aa000e2e1faf3291aa7a4f3e5#egg=diffusers
 spaces==0.29.2
 moviepy==1.0.3
+openai==1.38.0
