--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ gradio==4.40.0
 imageio-ffmpeg==0.5.1
 torch==2.2.0
 git+https://github.com/huggingface/diffusers.git@32da2e7673cfe0475a47c41b859f5fbd8bf17a40#egg=diffusers
-transformers==4.43.3
+transformers==4.42.0
 spaces==0.29.2
 moviepy==1.0.3
 openai==1.38.0
 accelerate==0.33.0
+sentencepiece==0.2.0
